# llm-risk-assessment

./: README.md  pyproject.toml
resources/samples/: sample_asset_register.csv  sample_risk_scenario_register.csv
src/app/: risk_register.py
src/app/prompts/: __init__.py  risk_register_prompts.py
