[tool.poetry]
name = "llm-risk-assessment"
version = "0.1.0"
description = "Repo containing code discussed in: https://medium.com/@ishish222/revolutionizing-risk-assessment-part-2-boilerplate-application-5df41609bd39"
authors = ["ishish.io <ts@ishish.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.1.42"
langchain-community = "^0.0.32"
gradio = "^4.26.0"
boto3 = "^1.34.84"
lxml = "^5.2.1"
langsmith = "^0.1.40"
python-dotenv = "^1.0.1"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
